src/test/ui/error-codes/E0197.stderr
error[E0197]: inherent impls cannot be unsafe
  --> $DIR/E0197.rs:3:1
   |
LL | unsafe impl Foo { }
   | ^^^^^^      ^^^ inherent impl for this type
   | |
   | unsafe because of this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0197`.
